objects/OF_Servizio__c.object
<CustomObject>
    <fields>
        <fullName>OF_Attivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CatalogoCommerciale__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Catalogo commerciale</label>
        <referenceTo>OF_CatalogoCommerciale__c</referenceTo>
        <relationshipLabel>Servizi</relationshipLabel>
        <relationshipName>Servizi</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_DataFineValidita__c</fullName>
        <label>Data fine validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataInizioValidita__c</fullName>
        <label>Data inizio validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_Durata_Servizio__c</fullName>
        <formula>OF_DataFineValidita__c -  OF_DataInizioValidita__c</formula>
        <label>OF_Durata_Servizio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_Servizio_Code__c</fullName>
        <description>Codice del Servizio</description>
        <label>Servizio Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Servizio</label>
    <nameField>
        <label>Servizio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servizi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OF_DataFineValidita</fullName>
        <active>true</active>
        <errorConditionFormula>OR(OF_DataFineValidita__c &lt; OF_CatalogoCommerciale__r.OF_DataInizioValidita__c, OF_DataFineValidita__c &gt; OF_CatalogoCommerciale__r.OF_DataFineValidita__c )</errorConditionFormula>
        <errorMessage>La data di fine validità non è compresa tra le date di validità del Catalogo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_DataInizioValidita</fullName>
        <active>true</active>
        <errorConditionFormula>OR(OF_DataInizioValidita__c &lt; OF_CatalogoCommerciale__r.OF_DataInizioValidita__c, OF_DataInizioValidita__c &gt; OF_CatalogoCommerciale__r.OF_DataFineValidita__c )</errorConditionFormula>
        <errorMessage>La data di inizio validità non è compresa tra le date di validità del Catalogo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_ValiditaDataServizio</fullName>
        <active>true</active>
        <errorConditionFormula>OF_DataFineValidita__c &lt; OF_DataInizioValidita__c</errorConditionFormula>
        <errorMessage>La data di fine validità non può essere minore della data di inizio validità</errorMessage>
    </validationRules>
</CustomObject>